--- a/readme.org
+++ b/readme.org
@@ -98,15 +98,15 @@ The base layer is maintained as separate tables for tap alphas, tap thumbs, and 
 ***** Thumbs
 
 #+NAME: thumbs
-| DF(U_TAP) | LCTL | DEL | BSPC | TAB | ENT | SPC | ESC | LCTL | DF(U_BASE) |
+| DF(U_BASE) | LCTL | DEL | BSPC | TAB | ENT | SPC | ESC | LCTL | DF(U_BASE) |
 
 
 **** Hold
 
 #+NAME: hold
 | BOOT | LGUI | LALT     | LCTL     | ALGR    | ALGR  | LCTL     | LALT     | LGUI | BOOT |
-| LSFT | U_NA | U_NA     | U_NA     |         |       | U_NA     | U_NA     | U_NA | LSFT |
-| U_NA | U_NA | LOCK_OPP | LOCK_CUR |         |       | LOCK_CUR | LOCK_OPP | U_NA | U_NA |
+| U_NA | U_NA | U_NA     | U_NA     |         |       | U_NA     | U_NA     | U_NA | U_NA |
+| LSFT | U_NA | LOCK_OPP | LOCK_CUR |         |       | LOCK_CUR | LOCK_OPP | U_NA | LSFT |
 | U_NP | LCTL | U_MEDIA  | U_NAV    | U_MOUSE | U_SYM | U_NUM    | U_FUN    | LCTL | U_NP |
 
 
